Support both client and server and fixing bugs